Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8699

Qt Quick Designer - render to image update issue with Qt Quick 2.0

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • None
    • Qt Creator 2.7.0
    • Quick Designer
    • None

    Description

      How to reproduce?

      Not 100% deterministic
      Drag in a couple of Rectangles
      Typically after dragging in 4-5 Rectangles no Items are updated
      any more in the form editor.

      More precisely: While size and position are still changing Items are not
      re-rendered (e.g." the text of Text Items does not change and the color of Retcangle).

      We render the items using DesignerSupport::renderImageForItem()
      (qtdeclarative\src\quick\designer) which again uses:
      QQuickShaderEffectTexture::toImage().

      Updates are still issued but QQuickShaderEffectTexture::toImage() always returns the old outdated image (old color/text).

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              thohartm Thomas Hartmann
              thohartm Thomas Hartmann
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes