DesignerSupport: Fix rendering in designer for if new items are added

The SG nodes are exchanged if the hierarchy the Qml hierarchy is changed.
So the SG root node should be always updated for every rendering.

Task-number: QTCREATORBUG-8699
Change-Id: I069142e4c5fc65efc3485017fa000ed7e8f2b350
Reviewed-by: Thomas Hartmann <Thomas.Hartmann@digia.com>